# malfunction

./: .gitignore  dune-project  malfunction.opam
src/miniml/: closure.ml  compile.ml  dune  id.ml  inter.ml  lexer.mll  miniml.ml  prettyprint.ml  type.ml
