
(ocamllex (modules lexer))
(menhir (modules parser))

(executable
 (name miniml)
 (flags (:standard -warn-error -a))
 (modules miniml)
 (libraries malfunction lib)
 (modes native))

 (library
  (name lib)
  (public_name malfunction.miniml)
  (flags (:standard -warn-error -a))
  (modules (:standard \ miniml))
  ; (libraries malfunction)
  (modes native))
 